OO-9048: Export forms as pdf in the form course element